--- a/DeepFilterNet/pyproject.toml
+++ b/DeepFilterNet/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "DeepFilterNet"
-version = "0.2.3-pre"
+version = "0.2.3"
 description = "Noise supression using deep filtering"
 authors = ["Hendrik Schröter"]
 repository = "https://github.com/Rikorose/DeepFilterNet"
@@ -23,8 +23,8 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-deepfilterlib = { path = "../pyDF/" }
-deepfilterdataloader = { path = "../pyDF-data/", optional = true }
+deepfilterlib = "0.2.3"
+deepfilterdataloader = { version = "0.2.3", optional = true }
 python = ">=3.7,<4.0"
 typing_extensions = "^4.0"
 numpy = ">=1.20,<2.0"
@@ -37,13 +37,11 @@ scipy = { version = "^1", optional = true }
 requests = { version = "^2.27", optional = true }
 appdirs = { version = "^1.4", optional = true }
 onnxruntime = { version = "^1.11", optional = true }
-semetrics = { git = "https://github.com/usimarit/semetrics.git", optional = true }
 
 [tool.poetry.extras]
 train = ["deepfilterdataloader", "icecream"]
 eval = ["pystoi", "pesq", "scipy"]
 soundfile = ["soundfile"]
-semetrics = ["semetrics"]
 dnsmos = ["requests"]
 dnsmos-local = ["appdirs", "onnxruntime", "requests"]
 
