ci: Test delvewheel repair wheel

--- a/.github/workflows/test_df.yml
+++ b/.github/workflows/test_df.yml
@@ -96,6 +96,7 @@ jobs:
           pip install delvewheel maturin
           maturin build --release -m pyDF/Cargo.toml
           delvewheel show target/wheels/*.whl
+          delvewheel repair target/wheels/*.whl
       - name: Configure poetry
         run: poetry config virtualenvs.in-project true
       - name: Set venv up cache
