--- a/libDF/Cargo.toml
+++ b/libDF/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "deep_filter"
-version = "0.2.4-pre"
+version = "0.2.4"
 resolver = "2"
 authors = ["Hendrik Schröter <h.schroeter@pm.me>"]
 edition = "2021"
