ci: Cache weights

--- a/.github/workflows/test_df.yml
+++ b/.github/workflows/test_df.yml
@@ -100,6 +100,7 @@ jobs:
         id: cache
         with:
           path: |
+            ~/.cache/DeepFilterNet
             .venv
             DeepFilterNet/.venv
           key: venv-${{ runner.os }}-${{ matrix.python }}-${{ hashFiles('**/pyproject.toml') }}
