--- a/.github/workflows/test_df.yml
+++ b/.github/workflows/test_df.yml
@@ -23,15 +23,15 @@ jobs:
       matrix:
         python: ["3.9"]
         os: ["ubuntu-latest", "macos-latest", "windows-latest"]
-        is_pr:
-          - ${{ github.event_name == 'pull_request' }}
-        include:
-          - os: "ubuntu-latest"
-        exclude:
-          - os: "macos-latest"
-            is_pr: true  # Run only linux on PR
-          - os: "windows-latest"
-            is_pr: true  # Run only linux on PR
+        # is_pr:
+        #   - ${{ github.event_name == 'pull_request' }}
+        # include:
+        #   - os: "ubuntu-latest"
+        # exclude:
+        #   - os: "macos-latest"
+        #     is_pr: true  # Run only linux on PR
+        #   - os: "windows-latest"
+        #     is_pr: true  # Run only linux on PR
     defaults:
       run:
         shell: bash
@@ -92,7 +92,10 @@ jobs:
         run: echo "$HOME/.local/bin" >> $GITHUB_PATH
       - name: Update Path for Windows
         if: ${{ matrix.os == 'windows-latest' }}
-        run: echo "$APPDATA\Python\Scripts" >> $GITHUB_PATH
+        run: |
+          echo "$APPDATA\Python\Scripts" >> $GITHUB_PATH
+          which python
+          python --version
       - name: Configure poetry
         run: poetry config virtualenvs.in-project true
       - name: Set venv up cache
@@ -110,7 +113,8 @@ jobs:
         working-directory: DeepFilterNet
         run: |
           poetry --version
-          poetry install --no-interaction -E eval -E dnsmos-local ${{env.EXTRA}}
+          poetry install -vvv --no-interaction -E eval -E dnsmos-local ${{env.EXTRA}}
+          echo "Installing pytorch"
           poetry run poe install-torch-cpu
 
       # Run tests
