ci: Add onnxruntime dep

--- a/.github/workflows/test_pypi_release.yml
+++ b/.github/workflows/test_pypi_release.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Install DeepFilterNet and Deps
         run: |
           pip install torch torchaudio --extra-index-url https://download.pytorch.org/whl/cpu
-          pip install deepfilternet requests
+          pip install deepfilternet onnxruntime
           pip install -r DeepFilterNet/requirements_test.txt
       # Test deepFilter executable
       - name: Test deepFilter script
