--- a/pyDF-data/Cargo.toml
+++ b/pyDF-data/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "DeepFilterDataLoader"
 version = "0.2.6-pre"
-authors = ["Hendrik Schröter <h.schroeter@pm.me>"]
+authors = ["Hendrik Schröter"]
 edition = "2021"
 
 [lib]
