libdf: Add logging feature to use log in transforms

--- a/libDF/Cargo.toml
+++ b/libDF/Cargo.toml
@@ -47,6 +47,7 @@ dataset = [
   "log",
 ]
 dataset_timings = []
+logging = ["log"]
 vorbis = ["lewton", "ogg"]
 flac = ["claxon"]
 cache = ["sled", "bincode"]
