build(deps): Update pyo3 and numpy to 0.17.1

--- a/pyDF-data/Cargo.toml
+++ b/pyDF-data/Cargo.toml
@@ -11,10 +11,10 @@ path = "src/lib.rs"
 
 [dependencies]
 deep_filter = { features = ["dataset", "vorbis", "flac"], path = "../libDF" }
-pyo3 = { version = "^0.17", default_features = true, features = [
+pyo3 = { version = "0.17.1", default_features = true, features = [
   "extension-module",
 ] }
+numpy = "0.17.1"
 log = { version = "0.4", features = ["std"] }
 crossbeam-channel = "^0.5"
-numpy = "^0.17"
 ndarray = "^0.15"
