--- a/pyDF/Cargo.toml
+++ b/pyDF/Cargo.toml
@@ -11,6 +11,6 @@ path = "src/lib.rs"
 
 [dependencies]
 deep_filter = { features = ["transforms", "logging"], path = "../libDF" }
-pyo3 = { version = "^0.17", features = ["extension-module"]}
-numpy = "^0.17"
+pyo3 = { version = "0.17.1", features = ["extension-module"]}
+numpy = "0.17.1"
 ndarray = "^0.15"
