--- a/.github/workflows/test_df.yml
+++ b/.github/workflows/test_df.yml
@@ -130,8 +130,8 @@ jobs:
         run: |
           mkdir ../out
           poetry run deepFilter ../assets/noisy_snr0.wav -o ../out
-          poetry run python df/scripts/dnsmos.py ../assets/noisy_snr0.wav -d -l -t 4.320409320319172 2.53722799232174 3.209282577524924
-          poetry run python df/scripts/dnsmos.py ../out/noisy_snr0_DeepFilterNet2.wav -d -l -t 4.126786274491472 4.460851010847896 3.623052233685985 
+          poetry run python df/scripts/dnsmos.py ../assets/noisy_snr0.wav -t 4.320409320319172 2.53722799232174 3.209282577524924
+          poetry run python df/scripts/dnsmos.py ../out/noisy_snr0_DeepFilterNet2.wav -t 4.12677460716050 4.45606916030286 3.62059268038164
 
       - uses: actions/upload-artifact@v2
         with:
