--- a/libDF/Cargo.toml
+++ b/libDF/Cargo.toml
@@ -27,6 +27,11 @@ name = "fix-sample-attrs"
 path = "src/bin/fix-sample-attrs-hdf5.rs"
 required-features = ["dataset", "bin"]
 
+[[bin]]
+name = "df-tract"
+path = "src/bin/tract.rs"
+required-features = ["bin", "tract"]
+
 [features]
 default = []
 
@@ -61,6 +66,8 @@ bin = [
   "rand",
   "ndarray-rand",
 ]
+use-jemalloc = ["jemallocator"]
+tract = ["tract-core", "tract-onnx", "tract-pulse", "tract-hir"]
 
 [dependencies]
 rustfft = "^6.0.1"
@@ -93,6 +100,13 @@ bincode = { version = "2.0.0-rc", default-features = false, features = [
 env_logger = { version = "0.9", optional = true }
 clap = { version = "3.2", optional = true, features = ["derive"] }
 rust-ini = { version = "^0.18", optional = true }
+tract-core = { version = "^0.17.7", optional = true }
+tract-onnx = { version = "^0.17.7", optional = true }
+tract-pulse = { version = "^0.17.7", optional = true }
+tract-hir = { version = "^0.17.7", optional = true }
+
+[target.'cfg(all(not(windows), not(target_os = "android"), not(target_os = "macos"), not(target_os = "freebsd"), not(target_env = "musl"), not(target_arch = "riscv64")))'.dependencies]
+jemallocator = {version = "0.5.0", optional = true}
 
 [dev-dependencies]
 rand = "0.8"
