libdf: Rename cargo feature: dataset_timings->timings

--- a/libDF/Cargo.toml
+++ b/libDF/Cargo.toml
@@ -51,7 +51,7 @@ dataset = [
   "roots",
   "log",
 ]
-dataset_timings = []
+timings = []
 logging = ["log"]
 vorbis = ["lewton", "ogg"]
 flac = ["claxon"]
