--- a/libDF/Cargo.toml
+++ b/libDF/Cargo.toml
@@ -59,6 +59,7 @@ cache = ["sled", "bincode"]
 bin = ["clap", "anyhow", "ctrlc", "log", "env_logger", "rand", "ndarray-rand"]
 use-jemalloc = ["jemallocator"]
 tract = [
+  "transforms",
   "tract-core",
   "tract-onnx",
   "tract-pulse",
@@ -68,7 +69,7 @@ tract = [
   "anyhow",
   "log",
   "flate2",
-  "tar"
+  "tar",
 ]
 
 [dependencies]
@@ -102,10 +103,10 @@ bincode = { version = "2.0.0-rc", default-features = false, features = [
 env_logger = { version = "0.9", optional = true }
 clap = { version = "3.2", optional = true, features = ["derive"] }
 rust-ini = { version = "^0.18", optional = true }
-tract-core = { version = "^0.17.7", optional = true }
-tract-onnx = { version = "^0.17.7", optional = true }
-tract-pulse = { version = "^0.17.7", optional = true }
-tract-hir = { version = "^0.17.7", optional = true }
+tract-core = { version = "^0.18.0", optional = true }
+tract-onnx = { version = "^0.18.0", optional = true }
+tract-pulse = { version = "^0.18.0", optional = true }
+tract-hir = { version = "^0.18.0", optional = true }
 flate2 = { version = "1.0.24", optional = true }
 tar = { version = "0.4.38", optional = true }
 
