--- a/.github/workflows/rust_lint.yml
+++ b/.github/workflows/rust_lint.yml
@@ -86,7 +86,7 @@ jobs:
       run:
         shell: bash
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Install Rust
         uses: dtolnay/rust-toolchain@master
@@ -110,7 +110,7 @@ jobs:
 
 
       - name: Build release binary
-        run: ${{ env.CARGO }} build --verbose --release ${{ env.TARGET_FLAGS }}
+        run: ${{ env.CARGO }} build --verbose --features bin,tract,use-jemalloc --profile=release-lto --bin deep-filter ${{ env.TARGET_FLAGS }}
 
       - name: Get the release version from the tag
         shell: bash
