--- a/libDF/Cargo.toml
+++ b/libDF/Cargo.toml
@@ -28,7 +28,7 @@ path = "src/bin/fix-sample-attrs-hdf5.rs"
 required-features = ["dataset", "bin"]
 
 [[bin]]
-name = "enhance-wav"
+name = "deep-filter"
 path = "src/bin/enhance_wav.rs"
 required-features = ["bin", "tract"]
 
@@ -56,7 +56,16 @@ logging = ["log"]
 vorbis = ["lewton", "ogg"]
 flac = ["claxon"]
 cache = ["sled", "bincode"]
-bin = ["clap", "anyhow", "ctrlc", "log", "env_logger", "rand", "ndarray-rand", "rust-ini"]
+bin = [
+  "clap",
+  "anyhow",
+  "ctrlc",
+  "log",
+  "env_logger",
+  "rand",
+  "ndarray-rand",
+  "rust-ini",
+]
 use-jemalloc = ["jemallocator"]
 tract = [
   "transforms",
