--- a/libDF/Cargo.toml
+++ b/libDF/Cargo.toml
@@ -66,6 +66,7 @@ bin = [
   "ndarray-rand",
   "rust-ini",
 ]
+wav-utils = ["ndarray", "hound"]
 use-jemalloc = ["jemallocator"]
 tract = [
   "transforms",
